CLAN6-158 Add get credentials handler
